--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "eslint": "^9.35.0",
-    "eslint-config-next": "*15.5.3",
+    "eslint-config-next": "^15.5.3",
     "husky": "^9.1.7",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
